[tool.poetry]
name = "ibet-network-tools"
version = "2.8"
description = "Development tooling for ibet-Network"
authors = ["BOOSTRY Co., Ltd. <dev@boostry.co.jp>"]

[tool.poetry.dependencies]
python = "3.13.11"

[tool.poetry.group.dev.dependencies]
isort = "^8.0.1"
black = "^26.3.1"

[tool.isort]
profile = "black"
combine_as_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
