[tool.poetry]
name = "ibet-Network tests"
version = "2.6"
description = "E2E tests from python client to Quorum node containers"
authors = ["BOOSTRY Co., Ltd. <dev@boostry.co.jp>"]

[tool.poetry.dependencies]
python = "3.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
eth-keyfile = "~0.8.1"
eth-utils = "~5.3.1"
py-solc-x = "2.0.4"
web3 = "~7.13.0"
coincurve = "~21.0.0"
isort = "^6.0.1"
black = "^25.1.0"

[tool.isort]
profile = "black"
combine_as_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"