[tool.poetry]
name = "ibet-Network tests"
version = "2.8"
description = "E2E tests from python client to Quorum node containers"
authors = ["BOOSTRY Co., Ltd. <dev@boostry.co.jp>"]

[tool.poetry.dependencies]
python = "3.13.11"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
eth-keyfile = "~0.8.1"
eth-utils = "~6.0.0"
py-solc-x = "2.0.5"
web3 = "~7.15.0"
coincurve = "~21.0.0"
pycryptodome = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"